--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "typed": "^10.0.0-beta.2",
     "typed.js": "^2.0.16",
+    "wavesurfer.js": "^6.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
