--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.7.0",
     "@chakra-ui/toast": "^6.1.4",
+    "@dschoon/react-waves": "^4.0.3",
     "@emotion/react": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
