--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-router": "^6.11.2",
     "react-simple-star-rating": "^5.1.7"
   }
